--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@nuxt/icon": "^1.12.0",
     "@nuxt/image": "^1.10.0",
+    "@nuxtjs/supabase": "^1.5.2",
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.0",
+    "@supabase/supabase-js": "^2.50.0",
     "nuxt": "^3.17.2",
     "nuxtjs-naive-ui": "^1.0.2",
     "pinia": "^3.0.2",
