--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^3.17.2",
     "nuxtjs-naive-ui": "^1.0.2",
     "pinia": "^3.0.2",
+    "swiper": "^11.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
   }
