--- a/package.json
+++ b/package.json
@@ -16,11 +16,16 @@
     "@nuxtjs/tailwindcss": "^6.14.0",
     "@pinia/nuxt": "^0.11.0",
     "@supabase/supabase-js": "^2.50.0",
+    "axios": "^1.10.0",
+    "dayjs": "^1.11.13",
     "nuxt": "^3.17.2",
     "nuxtjs-naive-ui": "^1.0.2",
     "pinia": "^3.0.2",
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
     "vue-router": "^4.5.1"
+  },
+  "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.4.4"
   }
 }
