--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "pinia": "^3.0.2",
     "swiper": "^11.2.8",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-yandex-maps": "^2.1.9"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.4.4"
